# PracticeProjects

./: README.md
GpaCalc/GpaCalculator/: CMakeLists.txt  main.cpp
GpaCalc/GpaCalculator/include/: CGPACalculator.h  Course.h  CourseDialog.h  FileHandler.h  IGradeConverter.h  MainWindow.h  SemesterRecord.h  Transcript.h  US4ScaleConverter.h
GpaCalc/GpaCalculator/main.dSYM/Contents/Resources/DWARF/: main
GpaCalc/GpaCalculator/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
GpaCalc/GpaCalculator/src/: CGPACalculator.cpp  Course.cpp  CourseDialog.cpp  FileHandler.cpp  MainWindow.cpp  SemesterRecord.cpp  Transcript.cpp  US4ScaleConverter.cpp  main_qt.cpp
GpaCalc/GpaCalculator/ui/: CourseDialog.ui  MainWindow.ui
MindMap/: CMakeLists.txt  README.md
MindMap/include/: MindMap.h  Node.h
MindMap/src/: MindMap.cpp  Node.cpp
MindMap/test/: test_mindmap.cpp  test_node.cpp
